<resources>
    <string name="app_name" translatable="false">Cheapest BEST</string>
    <string name="timepicker_btn" translatable="false">TimePicker</string>
    <string name="datepicker_btn" translatable="false">DatePicker</string>
    <string name="hint_a" translatable="false">By pressing \"Register\" you agree to the</string>
    <!--  <string name="hint_a"translatable="false">By pressing \"Register\"you agree to the</string>-->
    <string name="hint_terms" translatable="false">
        <a href="" target="_top">Terms &amp; Conditions</a>
</string>

    <string name="hint_Loremipsum" translatable="false">
        <a href="" target="_top">Lorem ipsum</a>
</string>
    <string name="gender" translatable="false">Gender</string>
    <string name="welcome_to_cheapest_best" translatable="false">Welcome to Cheapest BEST!</string>
    <string name="register" translatable="false">Register</string>
    <string name="login_here" translatable="false"> Login</string>
    <string name="if_you_already_have_account" translatable="false">If you already have an account  </string>
    <string name="date_of_birth" translatable="false">Date of Birth</string>
    <string name="male" translatable="false">Male</string>
    <string name="female" translatable="false">Female</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="login" translatable="false">Login</string>
    <string name="forgot_password" translatable="false">Forgot Password?</string>
    <string name="back" translatable="false">Back</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="email_address" translatable="false">Email *</string>
    <string name="name" translatable="false">Name</string>
    <string name="where">Where</string>
    <string name="save">Save</string>
    <string name="my_account">My Account</string>
    <string name="sign_up">Sign Up</string>
   <string name="who_are_you_siging_up_as">Who are you signing up as?</string>
    <string name="vendor">Vendor</string>
    <string name="user">User</string>
    <string name="or">or</string>


    <string-array name="categroies">
        <item>Category</item>
        <item>Arts &amp; Hobbies</item>
        <item>Automotive %26 Repair</item>
        <item>Electronics</item>
        <item>Entertainment</item>
        <item>Banking &amp; Finance</item>
        <item>Fitness &amp; Health</item>
        <item>Gifts</item>
        <item>Grocery</item>
        <item>Health &amp; Beauty</item>
        <item>Crafts &amp; Collectables</item>
        <item>Home &amp; Kitchen</item>
        <item>Jewelry</item>
        <item>Mobile Phone &amp; Accessories</item>
        <item>Other Services &amp; Retail</item>
        <item>Office Supplies</item>
        <item>Pets</item>
        <item>Restaurants &amp; Bars</item>
        <item>Sporting Goods</item>
        <item>Tools &amp; Hardware</item>
        <item>Toys &amp; Games</item>
        <item>Travel &amp; Transportation</item>
        <item>Weddings</item>
        <item>Babies &amp; Kids</item>
        <item>Rentals</item>
        <item>Furniture &amp; Appliances</item>
        <item>Real-Estate</item>
        <item>Sport &amp; Outdoors</item>
        <item>Education</item>
        <item>Hospitality &amp; Tourism</item>
        <item>Legal</item>
        <item>Charity</item>

    </string-array>

    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading…</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="join_date">Join Date</string>
    <string name="account_information">Account Information</string>
    <string name="used_coupons">Used Coupons</string>
    <string name="saved_coupons">Saved Coupons</string>
    <string name="mobile_number">Phone Number *</string>
    <string name="str_hint">Password</string>
    <string name="enter_your_email_below_to_recieve_your_password_reset_instructions">Enter your email below to recieve your password reset instructions</string>
    <string name="forgot_your_login_information">Forgot your login information?</string>
   <!-- <string name="facebook_app_id">339251316670496</string>-->
    <string name="facebook_app_id">303630243676075</string>
    <string name="fb_login_protocol_scheme">fb303630243676075</string>
    <string name="no_gps_message">Please enable location permissions in settings</string>
    <string name="ok_no_gps">Settings</string>
    <string name="no_no_gps">Cancel</string>
    <string name="delete">Delete</string>
    <string name="titile_gps">Location Permission Requested</string>
    <string name="purpose_of_getting_location">Cheapest BEST required location Permission to calculate accurate distance from your current location to coupon location,Allow location permission to see distance</string>
    <string name="no_login_alert_msg">Please login to continue to use the Cheapest BEST app</string>

</resources>
