<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:scrollbarThumbVertical="@null"
    tools:context=".ui.Fragments.SignUpSelect"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

<LinearLayout
    android:orientation="vertical"
    android:id="@+id/cheapbestmainlogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_marginTop="@dimen/margin_top_login"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top_login"
            android:layout_marginBottom="5dp"
            android:text="@string/who_are_you_siging_up_as"
            android:textColor="#000000"
            android:textSize="@dimen/hint_text_header"/>
        <TextView
            android:visibility="gone"
            android:gravity="center"
            android:text="Vendors are a person or company offering something for sale,especially a trader in the street"
            android:textColor="@color/color_green"
            android:textSize="10sp"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="10dp"
            tools:ignore="SmallSp" />

        <Button
            android:fontFamily="sans-serif"
            android:textSize="@dimen/button_textsize"
            android:textAllCaps="false"
            android:layout_width="@dimen/butnnon_sign_up_width"
            android:layout_marginTop="@dimen/margin_top_btn_login"
            android:layout_gravity="center"
            android:text="@string/user"
            android:id="@+id/sign_up_user"
            android:textColor="#ffffff"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/my_button_style"
            android:layout_height="@dimen/button_height" />

        <LinearLayout
            android:layout_marginTop="@dimen/margin_or"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <View
                android:layout_width="60dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/color_green" />
            <TextView
                tools:fontFamily="@font/abel"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_or"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/or" />
            <View
                android:layout_width="60dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:background="@color/color_green" />
        </LinearLayout>
        <Button
            android:layout_marginTop="@dimen/margin_or"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/button_textsize"
            android:textAllCaps="false"
            android:layout_width="@dimen/butnnon_sign_up_width"
            android:layout_gravity="center"
            android:text="@string/vendor"
            android:id="@+id/btn_vendor"
            android:textColor="#ffffff"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/my_button_style"
            android:layout_height="@dimen/button_height" />
</LinearLayout>
    </LinearLayout>
</ScrollView>