<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/login_frag_xml"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.Fragments.CheapBestMainLoginFragment">
    <ScrollView
        android:scrollbarThumbVertical="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <LinearLayout
            android:id="@+id/layout_main_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:orientation="vertical">
    <RelativeLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <!--android:background="@drawable/ic_sent_mail"-->

        <ImageView
            android:id="@+id/img_sentmail"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:contentDescription="@string/app_name"
            android:background="@drawable/em_new" />

        <EditText
            android:id="@+id/et_email_login"
            android:textColor="@color/black"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/img_sentmail"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            android:textColorHint="#c8c8d7"
            android:background="@android:color/transparent"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/img_sentmail"
            tools:ignore="Autofill" />
    </RelativeLayout>

    <View
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_green"/>

    <RelativeLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
       >

        <ImageView
            android:id="@+id/img_mobile"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:contentDescription="@string/app_name"
            android:background="@drawable/em_pass" />

        <EditText

            android:textColor="@color/black"
            android:id="@+id/et_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:inputType="textPassword"
            android:hint="@string/str_hint"
            android:textSize="14sp"
            android:textColorHint="#c8c8d7"
            android:layout_toRightOf="@+id/img_mobile"
            android:background="@android:color/transparent"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/img_mobile"
            tools:ignore="Autofill" />
    </RelativeLayout>

        <View
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="1dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_green"/>

    </LinearLayout>

    <Button
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/login"
        android:id="@+id/btn_login_now"
        android:textColor="#ffffff"
        android:background="@drawable/my_button_style"
        android:layout_height="55dp" />

    <TextView
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        tools:ignore="RtlCompat"
        android:id="@+id/tv_forgotpassword"
        android:layout_gravity="center"
        android:textColor="#7BC7E9"
        android:textSize="15sp"
        android:text="@string/forgot_password"
       android:clickable="true"
        android:focusable="true" />
    <com.facebook.login.widget.LoginButton

        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
