<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    tools:context=".ui.Fragments.signup.SignUpFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout_signup"
    android:layout_height="match_parent">

    <ScrollView
        android:scrollbarThumbVertical="@null"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sign_up_header_size"
                android:orientation="vertical">

                <ImageView
                    android:contentDescription="@string/app_name"
                    android:src="@color/bg_new"
                    android:scaleType="centerInside"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/btnloginfrag"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_margin="30dp"
                    android:padding="30dp"
                    android:src="@drawable/logo_header"
                    android:clickable="false"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerInside" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/welcome_to_cheapest_best"
                android:textColor="#000000"
                android:textSize="@dimen/edit_text_size"
                tools:fontFamily="@font/abel"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_marginLeft="@dimen/sign_up_profile_margin"
                android:layout_marginRight="@dimen/sign_up_profile_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rectangle"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp">

                        <ImageView
                            android:scaleType="centerInside"
                            android:contentDescription="@string/app_name"
                            android:id="@+id/img_user"
                            android:layout_width="@dimen/img_hint_size"
                            android:layout_height="@dimen/img_hint_size"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="11dp"
                            android:layout_marginLeft="11dp"
                            android:src="@drawable/p_sign"
                            />

                        <EditText
                            android:id="@+id/et_name_signup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_toRightOf="@+id/img_user"
                            android:imeOptions="actionNext"
                            android:textColorHint="@color/hintcolor"
                            android:inputType="text"
                            android:hint="Name * "
                            android:textSize="@dimen/edit_text_size_signup"
                            android:textColor="@color/black"
                            android:layout_centerVertical="true"
                            android:background="@android:color/transparent"
                            android:layout_marginStart="10dp"
                            android:layout_toEndOf="@+id/img_user"
                            android:autofillHints=""
                            tools:ignore="UnusedAttribute" />
                    </RelativeLayout>

                    <View
                        android:layout_marginTop="1dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/color_green"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="45dp">
                        <RelativeLayout
                            android:id="@+id/layout_dob"
                            android:layout_weight="0.3"
                            android:layout_width="0dp"
                            android:clickable="true"
                            android:layout_height="45dp"
                            android:focusable="true">

                            <ImageView
                                android:contentDescription="@string/app_name"
                                android:id="@+id/img_calender"
                                android:layout_width="@dimen/img_hint_size"
                                android:clickable="false"
                                android:scaleType="centerInside"
                                android:layout_height="@dimen/img_hint_size"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentLeft="true"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="11dp"
                                android:layout_marginLeft="11dp"
                                android:src="@drawable/em_dob"
                                />

                            <TextView
                                android:layout_toRightOf="@+id/img_calender"
                                android:textColor="@color/hintcolor"
                                android:layout_width="wrap_content"
                                android:id="@+id/tv_dob_signup"
                                android:layout_height="wrap_content"
                               android:gravity="center"

                                android:text="Date of Birth"
                                android:layout_marginLeft="10dp"
                                android:hint="@string/date_of_birth"
                                android:background="@android:color/transparent"
                                android:layout_centerVertical="true"
                                android:textSize="@dimen/edit_text_size_signup"
                                android:textColorHint="@color/hintcolor"/>
                        </RelativeLayout>

                        <View
                            android:layout_marginLeft="2dp"
                            android:layout_marginEnd="2dp"
                            android:layout_marginTop="1dp"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/color_green"
                            android:layout_marginStart="2dp"
                            android:layout_marginRight="2dp" />

                        <RelativeLayout
                            android:layout_weight="0.3"
                            android:layout_width="0dp"
                            android:layout_height="45dp">


                            <Spinner
                                android:textSize="@dimen/edit_text_size_signup"
                                android:id="@+id/gender_sp"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" />

                        </RelativeLayout>

                    </LinearLayout>

                    <View
                        android:layout_marginTop="1dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/color_green"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp">

                        <ImageView
                            android:id="@+id/img_sentmail"
                            android:layout_width="@dimen/img_hint_size"
                            android:layout_height="@dimen/img_hint_size"
                            android:scaleType="centerInside"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="11dp"
                            android:layout_marginLeft="11dp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/em_email" />

                        <EditText
                            android:textColor="@color/black"
                            android:id="@+id/et_email_sign_up"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_toRightOf="@+id/img_sentmail"
                            android:hint="@string/email_address"
                            android:inputType="textEmailAddress"
                            android:textSize="@dimen/edit_text_size_signup"
                            android:textColorHint="@color/hintcolor"
                            android:background="@android:color/transparent"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="10dp"
                            android:layout_toEndOf="@+id/img_sentmail" />
                    </RelativeLayout>

                    <View
                        android:layout_marginTop="1dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/color_green"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp">

                        <ImageView
                            android:id="@+id/img_mobile"
                            android:layout_width="@dimen/img_hint_size"
                            android:layout_height="@dimen/img_hint_size"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="11dp"
                            android:layout_marginLeft="11dp"
                            android:scaleType="centerInside"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ph_sign_up" />

                        <EditText

                            android:textColor="@color/black"
                            android:id="@+id/et_mobile_signup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_toRightOf="@+id/img_mobile"
                            android:hint="@string/mobile_number"
                            android:inputType="phone"
                            android:textSize="@dimen/edit_text_size_signup"
                            android:textColorHint="@color/hintcolor"
                            android:background="@android:color/transparent"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="10dp"
                            android:layout_toEndOf="@+id/img_mobile"
                            tools:ignore="Autofill" />
                    </RelativeLayout>
                </LinearLayout>

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:hint="@string/name"
                android:layout_marginStart="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/hint_a"
                android:textColor="@color/item_name"
                android:textSize="@dimen/edit_text_size" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                tools:ignore="RtlCompat"
                android:id="@+id/textViewvisit"
                android:textStyle="bold"
                android:hint="@string/name"

                android:layout_gravity="center"
                android:textColor="#7BC7E9"
                android:textColorLink="#7BC7E9"
                android:textSize="@dimen/edit_text_size"
                android:layout_marginTop="15dp"
                android:text="@string/hint_terms"
                android:autoLink="web"
                android:clickable="true"
                android:focusable="true" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="@dimen/butnnon_sign_up_width"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/my_button_style"
                android:fontFamily="sans-serif"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/button_textsize"


                />

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/hint_already_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/if_you_already_have_account"
                    android:textColor="@color/hintcolor"
                    android:textSize="12sp" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/login_here"
                    android:id="@+id/tv_login_signup"
                    android:layout_toRightOf="@+id/hint_already_signup"
                    android:textColor="#7BC7E9"
                    android:textSize="@dimen/edit_text_size"
                    android:layout_marginLeft="15dp"
                    android:layout_toEndOf="@+id/hint_already_signup"
                    android:layout_marginStart="15dp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>

